# sqlalchemy-tenant-wiper

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  pytest.ini  ruff.toml  setup.py
sqlalchemy_tenant_wiper/: __init__.py  core.py
tests/: test_core.py
